<?xml version="1.0" encoding="utf-8"?>
<resources>


    <!--I am using it-->
    <string name="url_website">http://www.kinetikos.io</string>
    <string name="visit_website">Visit Kinetikos Website</string>
    <string name="tts_setting">Text to Speech Setting</string>




    <string name="action_settings">Settings2</string>
    <string name="title_activity_settings">Settings</string>

    <!--<string name="pref_title_ringtone">Ringtone</string>-->
    <!--<string name="pref_ringtone_silent">Silent</string>-->

    <string name="default_gallery_storage">My Videos</string>
    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="title_upload_quality">Upload Quality</string>
    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
    <string name="app_version">3.5</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://www.androidhive.info/privacy-policy/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://www.androidhive.info/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://www.androidhive.info/terms-of-service/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>





    <string name="default_language_name">EN</string>

    <string name="switch_title">example_switch</string>
    <string name="switch_summary">Turn this option on or off</string>

    <string name="app_name">KinetikosApp</string>
    <string name="sensor_label">Sensor</string>
    <string name="sensor_calibrated_name">Gyroscope</string>
    <string name="sensor_active">Active</string>
    <string name="sensor_unavailable">Unavailable</string>
    <string name="action_config">Settings</string>
    <string name="action_reset">Reset</string>

    <string name="ro_x">RO x:</string>
    <string name="ro_y">RO y:</string>
    <string name="ro_z">RO z:</string>

    <string name="ac_x">AC x;</string>
    <string name="ac_y">AC y:</string>
    <string name="ac_z">AC z:</string>

    <string name="mg_x">MG a:</string>
    <string name="mg_y">MG b:</string>
    <string name="mg_z">MG c:</string>

    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>

    <string name="value_default">0.0</string>
    <string name="value_default_mean_filter">0.5</string>
    <string name="value_default_complimentary_filter">0.5</string>
    <string name="developer_url">KircherElectronics.com</string>
    <string name="confirm_label">I got this.</string>
    <string name="action_options">Options</string>
    <string name="action_help">Help</string>
    <string name="action_start_log">Start</string>
    <string name="action_stop_log">Stop</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_general_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_tts">Text to speech</string>
    <string name="pref_description_tts">Your device will read aloud the texts automatically
    </string>

    <string name="pref_title_stt">Speech to text</string>
    <string name="pref_description_stt">Your device will recognize your voice automatically
   </string>


    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_lang">Language</string>

    <string name="pref_title_lang">Language</string>
    <string-array name="pref_lang_titles">
        <item>English</item>
        <item>Portuguese</item>
    </string-array>
    <string-array name="pref_lang_values">
        <item>EN</item>
        <item>PT</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_language_settings">Language settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>