<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<SwitchPreference-->
        <!--android:defaultValue="false"-->
        <!--android:key="switch_preference_1"-->
        <!--android:title="Switch preference" />-->
    <SwitchPreference
        android:defaultValue="true"
        android:key="tts_switch"
        android:summary="@string/pref_description_tts"
        android:title="@string/pref_title_tts" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="stt_switch"
        android:summary="@string/pref_description_stt"
        android:title="@string/pref_title_stt" />



    <Preference android:title="@string/tts_setting">
        <intent android:action="com.yudaiyaguchi.kinetikosApp1.activity.TTSActivity"/>
    </Preference>

    <Preference android:title="@string/visit_website">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/url_website" />
    </Preference>


    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" />



</PreferenceScreen>
