<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.yudaiyaguchi.HealthChecker.Settings.Setting$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.yudaiyaguchi.HealthChecker.Settings.Setting$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.yudaiyaguchi.HealthChecker.Settings.Setting$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_language_black_24dp"
        android:title="@string/pref_header_lang" />

</preference-headers>
