<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextColor="@color/white"
        android:background="@color/light_green"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <RelativeLayout
        android:id="@+id/layout_calibrated_header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_weight="0.5" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" >

            <TextView
                android:id="@+id/label_calibrated_filter_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sensor_calibrated_name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/light_green"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/label_calibrated_filter_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/label_calibrated_filter_name"
                android:text="@string/sensor_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />
        </RelativeLayout>
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <RelativeLayout
        android:id="@+id/TableLayout"
        android:layout_width="match_parent"
        android:layout_height="121dp"
        android:layout_weight="0.75">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">

            <TableLayout
                android:id="@+id/table_calibrated_statistics_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TableRow
                    android:id="@+id/table_calibrated_statistics_left_row_0_ro"
                    android:layout_width="fill_parent"
                    android:layout_height="41dp"
                    android:padding="2dip">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/label_x_axis_calibrated_ro"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/ro_x"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/value_x_axis_calibrated_ro"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/label_x_axis_calibrated_ro"
                            android:text="@string/value_default"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/label_y_axis_calibrated_ro"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_marginLeft="0dp"
                            android:text="@string/ro_y"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/value_y_axis_calibrated_ro"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/label_y_axis_calibrated_ro"
                            android:text="@string/value_default"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/label_z_axis_calibrated_ro"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/ro_z"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/value_z_axis_calibrated_ro"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/label_z_axis_calibrated_ro"
                            android:text="@string/value_default"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </RelativeLayout>
                </TableRow>

                <!--I am  adding the acceralation for each direction here-->


                <TableRow
                    android:id="@+id/table_calibrated_statistics_left_row_0_ac"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dip">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/label_x_axis_calibrated_ac"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/ac_x"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/value_x_axis_calibrated_ac"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/label_x_axis_calibrated_ac"
                            android:text="@string/value_default"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/label_y_axis_calibrated_ac"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/ac_y"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/value_y_axis_calibrated_ac"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/label_y_axis_calibrated_ac"
                            android:text="@string/value_default"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/label_z_axis_calibrated_ac"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/ac_z"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/value_z_axis_calibrated_ac"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/label_z_axis_calibrated_ac"
                            android:text="@string/value_default"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </RelativeLayout>
                </TableRow>


                <TableRow
                    android:id="@+id/table_calibrated_statistics_left_row_0_mg"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dip">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/label_x_axis_calibrated_mg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/mg_x"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/value_x_axis_calibrated_mg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/label_x_axis_calibrated_mg"
                            android:text="@string/value_default"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/label_y_axis_calibrated_mg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/mg_y"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/value_y_axis_calibrated_mg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/label_y_axis_calibrated_mg"
                            android:text="@string/value_default"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/label_z_axis_calibrated_mg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/mg_z"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/value_z_axis_calibrated_mg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/label_z_axis_calibrated_mg"
                            android:text="@string/value_default"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </RelativeLayout>
                </TableRow>

                <TableRow
                    android:id="@+id/table_calibrated_statistics_left_row_0_location"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dip">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/label_latitude_location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/latitude"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/value_latitude_location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/label_latitude_location"
                            android:text="@string/value_default"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/label_longitude_location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/longitude"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/value_longitude_location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/label_longitude_location"
                            android:text="@string/value_default"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </RelativeLayout>

                </TableRow>

            </TableLayout>
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_weight="7.25"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1">

        <com.yudaiyaguchi.HealthChecker.gauge.GaugeBearing
            android:id="@+id/gauge_bearing_calibrated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />

        <com.yudaiyaguchi.HealthChecker.gauge.GaugeRotation
            android:id="@+id/gauge_tilt_calibrated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="1.25"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <com.yudaiyaguchi.HealthChecker.view.VectorDrawableButton
            android:id="@+id/button_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:backgroundTint="@color/dark_blue"
            android:text="@string/action_start_log"
            android:textStyle="bold"
            android:theme="@style/AppTheme.BlueButton"
            app:drawableBottomCompat="@drawable/ic_timeline_white_48px" />
    </LinearLayout>

</LinearLayout>